# trustmqtt

./: README.md  TrustMQTT_Project_Proposal.docx  WORK_PROGRESS.md
.github/workflows/: ci.yml
Trial/trustmqtt/: .env.example  PROJECT_PLAN.md  README.md  docker-compose.yml
Trial/trustmqtt/broker-plugin/include/: trustmqtt_plugin.h
Trial/trustmqtt/broker-plugin/src/: metadata_serialize.c  plugin_main.c  redis_publish.c
Trial/trustmqtt/scoring-worker/: pyproject.toml
Trial/trustmqtt/scoring-worker/trustmqtt/: queue_consumer.py
Trial/trustmqtt/scripts/: build_plugin.sh  seed_test_data.py
Trial/trustmqtt/traffic-simulator/: run_simulation.py
Trial/trustmqtt/traffic-simulator/devices/: base_device.py
V1/trustmqtt/broker-plugin/src/: hooks_connect.c  hooks_disconnect.c  hooks_publish.c  hooks_subscribe.c
V1/trustmqtt/dashboard/: README.md
V1/trustmqtt/mosquitto-config/: mosquitto.conf
V1/trustmqtt/scoring-worker/trustmqtt/: main.py
trustmqtt/: .env.example  .gitignore  Makefile  PROJECT_PROGRESS_NOTE.md  README.md  SYSTEM_ARCHITECTURE.md  WORK_SPLIT.md  docker-compose.yml  mosquitto_broker.h  mosquitto_broker.utf8.h
trustmqtt/broker-plugin/: CMakeLists.txt  Dockerfile
trustmqtt/broker-plugin/src/: hooks_connect.c  hooks_disconnect.c  hooks_publish.c  hooks_subscribe.c  metadata_serialize.c  plugin_main.c
trustmqtt/broker-plugin/tests/: test_metadata_serialize.c
trustmqtt/config/: tmq.yaml
trustmqtt/docker/mosquitto/: Dockerfile  acl.conf  mosquitto.conf
trustmqtt/docs/: SPEC.md
trustmqtt/eval/datasets/: README.md
trustmqtt/eval/scenarios/: coordinated_drift_30_clients.yaml  credential_reuse_hijack.yaml  slow_rate_escalation.yaml  topic_scope_expansion.yaml
trustmqtt/evaluation/: benchmark_detection.py  benchmark_latency.py
trustmqtt/evaluation/datasets/: README.md
trustmqtt/grafana/provisioning/dashboards/: client_drilldown.json  fleet_overview.json  provider.yml  system_health.json
trustmqtt/grafana/provisioning/datasources/: datasource.yml
trustmqtt/migrations/: env.py
trustmqtt/migrations/versions/: 0001_initial.py
trustmqtt/mosquitto-config/: acl.conf  dynamic_security.json  mosquitto.conf
trustmqtt/plugin/: CMakeLists.txt
trustmqtt/plugin/include/: emitter.h  enforce.h  ring.h  trustmqtt_plugin.h  verdict_cache.h
trustmqtt/plugin/src/: emitter.c  enforce.c  plugin.c  ring.c  verdict_cache.c
trustmqtt/plugin/tests/: Makefile  test_enforce.c  test_ring.c  test_token_bucket.c  test_verdict_cache.c
trustmqtt/scoring-worker/: Dockerfile  requirements.txt
trustmqtt/scoring-worker/tests/: test_sample.py
trustmqtt/scoring-worker/trustmqtt/: config.py  main.py  queue_consumer.py
trustmqtt/scoring-worker/trustmqtt/feature_engineering/: feature_schema.py  message_features.py  (+1 more)
trustmqtt/scripts/: setup_dev_env.sh
trustmqtt/tmq_worker/: Dockerfile  __main__.py  config.py  drift.py  features.py  fleet.py  fsm.py  incidents.py  ingest.py  llm.py  policy.py  redact.py  replay.py  requirements.txt  storage.py  train.py  verdicts.py
trustmqtt/tmq_worker/tests/: test_drift.py  test_features.py  test_fleet.py  test_fsm.py  test_incidents.py  test_ingest.py  test_llm.py  test_main.py  test_policy.py  test_redact.py  test_replay.py  test_storage.py  test_verdicts.py
trustmqtt/traffic-simulator/: run_simulation.py
trustmqtt/traffic-simulator/attacks/: credential_replay_attack.py  different_client_lib_attack.py  flood_messages.py  gradual_drift_firmware_sim.py  protocol_violation.py  recon_wildcard_subscribe.py  replay_attack.py  spoof_publish.py
trustmqtt/traffic-simulator/devices/: base_device.py  door_lock.py  motion_sensor.py  temperature_sensor.py
(+13 files in other folders)
